--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
              
     <!-- Logo -->
  
-    <!-- Navigation Menu -->
+    <!-- Navigation Menu --->
     <nav>
         
            <a href="#">Home</a>
